fixed floating contrastBar and absolute positioning

--- a/iipmooviewer-1.1/css/iip.css
+++ b/iipmooviewer-1.1/css/iip.css
@@ -4,21 +4,21 @@ div#targetframe {
   left: 0px;
   top: 0px;
   background: black;
-  position: absolute;
-  overflow: hidden;
+  position: relative;
+  /*overflow: hidden;*/
   padding: 0px;
   border: 2px inset grey;
-  height:77px;
+  /*height:77px;*/
+  height:705px;
+  width: 100%;
 }
 
 div#contrastBar {
-width:100%;
-height: 20px;
-margin-left:auto;
-margin-right:auto;
+width:105%;
+height: 23px;
 background-color:#cccccc;
-position:absolute;
-top:670px;
+position:relative;
+right:10px;/* to fix the weird issue with contrast bar not reaching to far left*/
 }
 div#handle {
 background-color:#bbb;
