--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ border:1px solid #aaa;
 /*********************** centralFrame ****************************/
 #centralFrame{
 width:99%;
-height:75%;
+height:80%;
 padding:0;
 margin:0;
 border-right:2px solid #aaa;
